fixed the application

--- a/src/app.html
+++ b/src/app.html
@@ -10,7 +10,7 @@
 	<script src="https://www.sportdata.org/mainpage2018/assets/js/jquery.scrollex.min.js"></script>
 	<link rel="stylesheet" href="https://www.sportdata.org/setglinc/css/bootstrap.min.css">
 	<script type="text/javascript" src="https://www.sportdata.org/setglinc/js/bootstrap.min.js"></script>
-	<link rel="stylesheet" href="css/main.css" />
+	<link rel="stylesheet" href="../css/main.css" />
 	<noscript><link rel="stylesheet" href="https://www.sportdata.org/mainpage2018/assets/css/noscript.css" /></noscript>
 	
 	<link rel="stylesheet" href="https://www.sportdata.org/setglinc/leaflet/leaflet.css"/>
